force-app/main/default/objects/Service_Episode__c/Service_Episode__c.object-meta.xml
<CustomObject>
    <description>VOCA-grade service-delivery tracking. One record per service touchpoint (counseling session, court accompaniment, transportation, material aid, etc.). Drives monthly VOCA reports and outcomes dashboards.</description>
    <label>Service Episode</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Service Episode Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>