force-app/main/default/objects/Service_Episode__c/fields/Advocate__c.field-meta.xml
<CustomField>
    <fullName>Advocate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff member who delivered this service. Auto-defaults to current user.</description>
    <label>Advocate</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Service Episodes Delivered</relationshipLabel>
    <relationshipName>Service_Episodes_Delivered</relationshipName>
    <type>Lookup</type>
</CustomField>