force-app/main/default/objects/Service_Episode__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The survivor (Contact) who received this service. Required.</description>
    <label>Survivor (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Episodes</relationshipLabel>
    <relationshipName>Service_Episodes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>