force-app/main/default/objects/Service_Episode__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <description>Which grant or funding source this service is billed against. Required if VOCA_Eligible is true.</description>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VOCA</fullName>
                <default>true</default>
                <label>VOCA</label>
            </value>
            <value>
                <fullName>FVPSA</fullName>
            </value>
            <value>
                <fullName>BRCF</fullName>
            </value>
            <value>
                <fullName>Hancock County</fullName>
            </value>
            <value>
                <fullName>Private Donation</fullName>
            </value>
            <value>
                <fullName>Other Grant</fullName>
            </value>
            <value>
                <fullName>Unfunded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>