force-app/main/default/objects/Service_Episode__c/fields/Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>Hours_Spent__c</fullName>
    <description>Decimal hours spent delivering this service. 1.5 = 90 minutes. Used for VOCA grant reporting and Total_Service_Hours rollup on Contact.</description>
    <label>Hours Spent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>