force-app/main/default/objects/Service_Episode__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Optional link to the Intake/case this service falls under. Used for case-level reporting.</description>
    <label>Intake</label>
    <referenceTo>caseman__Intake__c</referenceTo>
    <relationshipLabel>Service Episodes</relationshipLabel>
    <relationshipName>Service_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>