force-app/main/default/objects/Service_Episode__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Short outcome statement. Example: "Protective order granted", "Safety plan updated; survivor declined shelter".</description>
    <label>Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>