force-app/main/default/objects/Service_Episode__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The SFTS program this service was delivered under. Powers program-level reporting and outcomes tracking.</description>
    <label>Program</label>
    <referenceTo>SFTS_Program__c</referenceTo>
    <relationshipLabel>Service Episodes</relationshipLabel>
    <relationshipName>Service_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>