force-app/main/default/objects/Service_Episode__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>When the service was delivered.</description>
    <label>Service Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>