force-app/main/default/objects/Service_Episode__c/fields/Service_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Service_Subtype__c</fullName>
    <description>Free-text specifics. Example: Service_Type = "Court Accompaniment", Subtype = "Protective Order Hearing — Hancock County".</description>
    <label>Service Subtype / Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>