force-app/main/default/objects/Service_Episode__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>VOCA-aligned service category. Drives federal grant reporting — pick the closest match. Free-text specifics go in Service_Subtype__c.</description>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>Counseling — Individual</fullName>
            </value>
            <value>
                <fullName>Counseling — Group</fullName>
            </value>
            <value>
                <fullName>Safety Planning</fullName>
            </value>
            <value>
                <fullName>Court Accompaniment</fullName>
            </value>
            <value>
                <fullName>Legal Advocacy</fullName>
            </value>
            <value>
                <fullName>Personal Advocacy</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Material Aid</fullName>
            </value>
            <value>
                <fullName>Emergency Shelter</fullName>
            </value>
            <value>
                <fullName>Children's Support</fullName>
            </value>
            <value>
                <fullName>Information &amp; Referral</fullName>
            </value>
            <value>
                <fullName>Mental Health Referral</fullName>
            </value>
            <value>
                <fullName>Medical Accompaniment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>