force-app/main/default/objects/Service_Episode__c/fields/VOCA_Eligible__c.field-meta.xml
<CustomField>
    <fullName>VOCA_Eligible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this service counts toward VOCA federal grant reporting. Default true; uncheck for services explicitly outside VOCA scope (e.g., perpetrator-facing services, fundraising-related interactions).</description>
    <label>VOCA Eligible</label>
    <type>Checkbox</type>
</CustomField>