force-app/main/default/objects/Service_Episode__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Hours_Spent__c</columns>
    <columns>Funding_Source__c</columns>
    <columns>Advocate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>