force-app/main/default/objects/Service_Episode__c/listViews/VOCA_This_Quarter.listView-meta.xml
<ListView>
    <fullName>VOCA_This_Quarter</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Hours_Spent__c</columns>
    <columns>Advocate__c</columns>
    <columns>Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VOCA_Eligible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Service_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_QUARTER</value>
    </filters>
    <label>VOCA — This Quarter</label>
</ListView>